--- a/Aulas/Aula1/depois/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/Aulas/Aula1/depois/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -30,7 +30,7 @@
         @foreach (var item in Model)
         {
             
-            <div class="row row-center linha-produto">
+            <div class="row row-center linha-produto" item-id="@item.Id">
                 <div class="col-md-3">
                     <img class="img-produto-carrinho" src="/images/produtos/large_@(item.Produto.Codigo).jpg" />
                 </div>
@@ -46,7 +46,8 @@
                         <input type="text" value="@(item.Quantidade)"
                                class="form-control text-center" />
                         <span class="input-group-btn">
-                            <button class="btn btn-default">
+                            <button class="btn btn-default"
+                                    onclick="clickIncremento(this)">
                                 <span class="glyphicon-plus"></span>
                             </button>
                         </span>
@@ -91,3 +92,28 @@
         </div>
     </div>
 </div>
+
+@section Scripts
+{
+    <script type="text/javascript">
+        function clickIncremento(btn) {
+            var linhaDoItem = $(btn).parents('[item-id]');
+            var itemId = $(linhaDoItem).attr('item-id');
+            var novaQtde = $(linhaDoItem).find('input').val();
+
+            var data = {
+                Id: itemId,
+                Quantidade: novaQtde
+            };
+
+            $.ajax({
+                url: '/pedido/updatequantidade',
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify(data)
+            });
+
+            debugger;
+        }
+    </script>
+}
