--- a/Aulas/Aula4/depois/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/Aulas/Aula4/depois/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -2,12 +2,9 @@
     ViewData["Title"] = "Carrinho";
 }
 @model CarrinhoViewModel;
-
 <h3>Meu Carrinho</h3>
-
 <div class="panel panel-default">
     <div class="panel-heading">
-
         <div class="row">
             <div class="col-md-6">
                 Item
@@ -26,10 +23,9 @@
         </div>
     </div>
     <div class="panel-body">
-
         @foreach (var item in Model.Itens)
         {
-            
+
             <div class="row row-center linha-produto" item-id="@item.Id">
                 <div class="col-md-3">
                     <img class="img-produto-carrinho" src="/images/produtos/large_@(item.Produto.Codigo).jpg" />
@@ -45,8 +41,8 @@
                             </button>
                         </span>
                         <input type="text" value="@(item.Quantidade)"
-                               class="form-control text-center" 
-                               onblur="carrinho.updateQuantidade(this)"/>
+                               class="form-control text-center"
+                               onblur="carrinho.updateQuantidade(this)" />
                         <span class="input-group-btn">
                             <button class="btn btn-default"
                                     onclick="carrinho.clickIncremento(this)">
@@ -63,7 +59,6 @@
             </div>
 
         }
-
     </div>
     <div class="panel-footer">
         <div class="row">
@@ -81,22 +76,20 @@
         </div>
     </div>
 </div>
-
 <div class="row">
     <div class="col-md-12">
         <div class="pull-right">
             <a class="btn btn-success" asp-action="carrossel">
                 Adicionar Produtos
             </a>
-            <a class="btn btn-success" asp-action="resumo">
-                Finalizar Pedido
+            <a class="btn btn-success" asp-action="cadastro">
+                Preencher Cadastro
             </a>
         </div>
     </div>
 </div>
-
 @section Scripts
-{
+    {
     <script src="~/js/carrinho.js">
 
     </script>
