--- a/Aulas/Aula5/depois/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/Aulas/Aula5/depois/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -2,9 +2,16 @@
     ViewData["Title"] = "Carrinho";
 }
 @model CarrinhoViewModel;
+
 <h3>Meu Carrinho</h3>
+
+<form method="post" asp-action="carrinho">
+</form>
+
+
 <div class="panel panel-default">
     <div class="panel-heading">
+
         <div class="row">
             <div class="col-md-6">
                 Item
@@ -23,9 +30,10 @@
         </div>
     </div>
     <div class="panel-body">
+
         @foreach (var item in Model.Itens)
         {
-
+            
             <div class="row row-center linha-produto" item-id="@item.Id">
                 <div class="col-md-3">
                     <img class="img-produto-carrinho" src="/images/produtos/large_@(item.Produto.Codigo).jpg" />
@@ -41,8 +49,8 @@
                             </button>
                         </span>
                         <input type="text" value="@(item.Quantidade)"
-                               class="form-control text-center"
-                               onblur="carrinho.updateQuantidade(this)" />
+                               class="form-control text-center" 
+                               onblur="carrinho.updateQuantidade(this)"/>
                         <span class="input-group-btn">
                             <button class="btn btn-default"
                                     onclick="carrinho.clickIncremento(this)">
@@ -59,6 +67,7 @@
             </div>
 
         }
+
     </div>
     <div class="panel-footer">
         <div class="row">
@@ -76,6 +85,7 @@
         </div>
     </div>
 </div>
+
 <div class="row">
     <div class="col-md-12">
         <div class="pull-right">
@@ -88,8 +98,9 @@
         </div>
     </div>
 </div>
+
 @section Scripts
-    {
+{
     <script src="~/js/carrinho.js">
 
     </script>
