--- a/Aulas/CQRS/depois/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
+++ b/Aulas/CQRS/depois/CasaDoCodigo/Views/Pedido/Carrinho.cshtml
@@ -36,9 +36,9 @@
             
             <div class="row row-center linha-produto" item-id="@item.Id">
                 <div class="col-md-3">
-                    <img class="img-produto-carrinho" src="/images/produtos/large_@(item.Produto.Codigo).jpg" />
+                    <img class="img-produto-carrinho" src="/images/produtos/large_@(item.ProdutoCodigo).jpg" />
                 </div>
-                <div class="col-md-3">@(item.Produto.Nome)</div>
+                <div class="col-md-3">@(item.ProdutoNome)</div>
                 <div class="col-md-2 text-center">R$ @(item.PrecoUnitario)</div>
                 <div class="col-md-2 text-center">
                     <div class="input-group">
